--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <div class="campo"> 
                 <label for="telefono">Teléfono:</label>
-                <input type="tel" id="telefono" name="telefono" placeholder="600 000 000" pattern=" [0-9]{3} [0-9]{3} [0-9]{3}" tabindex="10">
+                <input type="tel" id="telefono" name="telefono" placeholder="600 000 000"  tabindex="10">
             </div>
 
         </fieldset>
